# dqueue

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.travis/: build.sh
benchmarks/: CMakeLists.txt  connection_test.cpp  echo_queue.cpp
cmake/: CompillerSettings.cmake
libdqueue/: CMakeLists.txt  abstract_client.cpp  abstract_client.h  abstract_server.cpp  abstract_server.h  async_connection.cpp  async_connection.h  async_io.cpp  async_io.h  client.cpp  client.h  config.h  dqueue.h  exports.h  imessage_pool.h  iqueue_client.h  kinds.h  memory_message_pool.cpp  memory_message_pool.h  network_message.cpp  network_message.h  node.cpp  node.h  node_settings.h  q.cpp  q.h  queries.cpp  queries.h  re_cache.cpp  re_cache.h  serialisation.cpp  serialisation.h  server.cpp  server.h  socket_ptr.h  subscription_settings.h  users.cpp  users.h
libdqueue/network/: abstract_client.cpp  abstract_client.h  abstract_server.cpp  abstract_server.h  async_io.cpp  async_io.h  socket_ptr.h
libdqueue/utils/: exception.h  logger.cpp  logger.h  strings.cpp  strings.h  utils.cpp  utils.h
libdqueue/utils/async/: locker.cpp  locker.h
microbenchmarks/: CMakeLists.txt  common.cpp  common.h  serialisation.cpp
unittests/: CMakeLists.txt  abstract_server_client.cpp  abstract_server_client_test.cpp  async_connection_test.cpp  basic_reconnection_test.cpp  main.cpp  message_pool_test.cpp  node_test.cpp  serialisation_test.cpp  server_client_connection.cpp  server_client_test.cpp  utils_test.cpp
